Fix hero video on mobile

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -31,14 +31,18 @@
       inset: 0;
     }
 
-    video {
-      position: absolute;
-      inset: 0;
-      transform: translateY(-50%);
+    img {
+      object-fit: cover;
       width: 100%;
+      height: 100%;
     }
 
-    img {
+    > div {
+      position: absolute;
+      inset: 0;
+    }
+
+    video {
       object-fit: cover;
       width: 100%;
       height: 100%;
